Fixed spelling error and added margin on subheader on small devices

--- a/styles/style.css
+++ b/styles/style.css
@@ -59,11 +59,6 @@ nav li:hover {
     font-weight: 400;
   }
 
-/* img{
-  object-fit: contain !important;
-} */
-
-
 }
 
 ul.inline
